opraveny bug v generatore s vypoctom packetsCount

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="stopText">Stop</string>
     <string name="title_activity_pom">read qr</string>
     <string name="title_activity_received_file">ReceivedFileActivity</string>
+    <string name="title_activity_read_qr2">ReadQRActivity2</string>
 </resources>
